test/fail_compilation/extra-files/fail17489_file.d
struct Path {
		immutable()m_nodes;
}

enum DirectoryChangeType {}


struct DirectoryChange {
	DirectoryChangeType type;
	Path path;
}
